source/sass/_blogpage.scss
.blog {
    &-masthead {
        @extend %masthead;
        font-family: $sans-serif-font;
        padding: 1.5rem 0 5rem;
        text-align: center;
        color: white;

        &__icon {
            color: inherit;
            text-decoration: none;
            display: inline-block;
            font-family: Lora serif;
            font-size: 4.5rem;
            margin: 2rem;
            padding: 2.2rem 1.5rem;
            border: 1px solid #fff;
            border-radius: 50px;

            &::before {
                content: "T";
            }

        }

        &__title {
            font-size: 1.7rem;
            font-weight: 700;
        }

        &__categories {
            list-style: none;
            margin-top: .5rem;
            margin-left: 0;
            width: 100%;
            display: flex;
            justify-content: center;
        }

        &__category {
            font-size: 1.2rem;
            margin: 0 10px;
            color: rgba(#fff, 0.65);

            & a {
                color: rgba(#fff, 0.65);
            }

            &--active {
                color: #fff;

                & a {
                    color: #fff;
                }
            }
        }
    }

    &-container {
        width: 40rem;
        // max-width: 40rem;
    }

    // &-posts {}

    &-post {

        margin-bottom: 3rem;
        padding-bottom: 3rem;
        // border-bottom: 1px solid rgba(0, 0, 0, .25);
        border-bottom: 1px solid $border-color;

        &:last-child {
            padding-bottom: 0;
            border-bottom: none;
        }
        
        &__link {
            color: inherit;
            &:hover {
                text-decoration: underline;
            }
        }

        dt {
            font-weight: bold;
        }

        dl,
        dd {
            font-size: .9rem;
        }

        em {
            opacity: 1;
            font-weight: bold;
            color: darkgreen;
        }

        strong {
            opacity: 1;
            font-weight: bold;
            font-style: normal;
            color: #000;
        }

        h1 + div {
            margin: 0 0 2rem 0;
        }

        pre {
            margin-bottom: 1rem;
        }

        h2,
        h3,
        h4,
        h5,
        h6 {
            margin: 2rem 0 2rem 0;
        }

        ul, ol {
            list-style-position: inside;
            li + li {
                margin-top: .5rem;
            }
        }

        p a, li a {
            text-decoration: none;
            background-color: rgba($secondary-text-color, 0.08);
            color: $normalcolor;
            border-bottom: 1px solid rgba($secondary-text-color, 0.3);
            font-weight: normal;
            &:hover {
                background-color: rgba($secondary-text-color, 0.15);
                border-bottom: 1px solid rgba($secondary-text-color, 0.9);
                font-weight: 600;
            }
        }

        &__article-title {
            font-size: 2rem;
            margin-bottom: .4rem;
        }

        &__meta-container {
            font-size: 1.2rem;
            color: rgba(#000, 0.45);
            margin-bottom: 1rem;
        }

        &__article-category {
            text-transform: uppercase;
        }

        &__article-date, &__article-category {
            color: rgba(#000, 0.70);
        }

        ul, ol {
            margin-bottom: 1rem;
        }

        p {
            // font-size: 1.15rem;
            opacity: .8;
            margin-bottom: 1rem;
        }

        img {
            display: block;
        }

        img + p {
            margin-top: 1rem;
        }
    }

}

